# llama-switcher

./: .gitignore  HERMES_AGENT_TOOLING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
hermes-skill/: .env.example  README.md  SKILL.md  package-lock.json  package.json  skill.json  tsconfig.json
hermes-skill/scripts/: llama_switcher.py
hermes-skill/src/: client.ts  index.ts  smoke.ts  tools.ts  types.ts
scripts/: generate-icons.ps1
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: hooks.nsi
src-tauri/src/: alias_formatter.rs  benchmark.rs  hermes_install.rs  lib.rs  local_api.rs  logging.rs  main.rs  process_manager.rs  process_tree.rs  script_scanner.rs  settings.rs  state.rs  tray.rs
src/components/: LogViewer.tsx  Nav.tsx  ProfileTable.tsx  StatusCard.tsx
src/pages/: AgentControlPage.tsx  BenchmarkPage.tsx  DetectedScriptsPage.tsx  LogsPage.tsx  SettingsPage.tsx  StatusPage.tsx
