[package]
name = "llama-switcher"
version = "0.1.0"
description = "Lightweight Windows tray app for switching llama.cpp server profiles."
authors = ["Llama Switcher"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "llama_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
tiny_http = "0.12"
ureq = { version = "2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
